# EvolutionHall.gd
# å‡ä»™å° - å¡ç‰‡é€²åŒ–ç³»çµ±
extends Control

# ==================== å ´æ™¯é è¼‰ ====================
const EvolutionCardSlot = preload("res://scenes/evolution/EvolutionCardSlot.tscn")

# ==================== ç¯€é»å¼•ç”¨ ====================
@onready var back_button = $MarginContainer/VBoxContainer/TopBar/BackButton
@onready var card_list_panel = $MarginContainer/VBoxContainer/MainContent/LeftPanel/CardListPanel
@onready var card_list = $MarginContainer/VBoxContainer/MainContent/LeftPanel/CardListPanel/ScrollContainer/CardList

# é€²åŒ–å€åŸŸ
@onready var evolution_area = $MarginContainer/VBoxContainer/MainContent/RightPanel/EvolutionArea
@onready var target_card_slot_container = $MarginContainer/VBoxContainer/MainContent/RightPanel/EvolutionArea/TargetCardSlotContainer
@onready var material_slots_container = $MarginContainer/VBoxContainer/MainContent/RightPanel/EvolutionArea/MaterialSlotsContainer

# æŒ‰éˆ•
@onready var auto_fill_button = $MarginContainer/VBoxContainer/BottomBar/AutoFillButton
@onready var evolve_button = $MarginContainer/VBoxContainer/BottomBar/EvolveButton

# ä¿¡æ¯é¡¯ç¤º
@onready var info_label = $MarginContainer/VBoxContainer/MainContent/RightPanel/InfoLabel
@onready var cost_label = $MarginContainer/VBoxContainer/BottomBar/CostLabel

# é€²åŒ–é è¦½
@onready var preview_card_slot_container = $MarginContainer/VBoxContainer/MainContent/RightPanel/PreviewContainer/PreviewCardSlotContainer

# å¡ç‰‡è©³æƒ…é¢æ¿
@onready var card_detail_panel = $CardDetailPanel

# ==================== æ•¸æ“š ====================
var player_cards: Array = []  # ç©å®¶æ“æœ‰çš„æ‰€æœ‰å¡ç‰‡ (Array[CardData])
var card_database: Dictionary = {}  # å¡ç‰‡å®šç¾©æ•¸æ“šåº« {card_id: card_data}

var target_card: CardData = null  # æ”¾å…¥ä¸­é–“çš„ç›®æ¨™å¡ç‰‡
var target_card_slot_node = null  # ç›®æ¨™å¡æ§½UIç¯€é»
var material_cards: Array = []  # æ”¾å…¥çš„ç´ æå¡ç‰‡ï¼ˆæœ€å¤š5å¼µï¼ŒCardDataæˆ–nullï¼‰
var material_slots: Array = []  # ç´ ææ§½ä½UIç¯€é»

var preview_card_slot_node = null  # é€²åŒ–é è¦½å¡æ§½UIç¯€é»

const MAX_MATERIAL_SLOTS = 5
const EVOLUTION_GOLD_COST = 100

# ==================== åˆå§‹åŒ– ====================
func _ready():
	back_button.pressed.connect(_on_back_pressed)
	auto_fill_button.pressed.connect(_on_auto_fill_pressed)
	evolve_button.pressed.connect(_on_evolve_pressed)

	# åˆå§‹åŒ–ç›®æ¨™å¡æ§½
	_create_target_card_slot()

	# åˆå§‹åŒ–ç´ ææ§½ä½
	_create_material_slots()

	# åˆå§‹åŒ–é€²åŒ–é è¦½æ§½
	_create_preview_card_slot()

	# è¼‰å…¥å¡ç‰‡æ•¸æ“šåº«
	_load_card_database()

	# è¼‰å…¥ç©å®¶å¡ç‰‡
	_load_player_cards()

	# æ›´æ–°UI
	_update_ui()
	update_evolution_info()

	# æª¢æŸ¥æ˜¯å¦æœ‰å¾èƒŒåŒ…é¸ä¸­è¦é€²åŒ–çš„å¡ç‰‡
	_check_auto_select_card()

func _create_target_card_slot():
	"""å‰µå»ºç›®æ¨™å¡æ§½"""
	target_card_slot_node = EvolutionCardSlot.instantiate()
	target_card_slot_node.custom_minimum_size = Vector2(150, 210)
	target_card_slot_node.slot_clicked.connect(_on_target_slot_clicked)
	target_card_slot_container.add_child(target_card_slot_node)
	target_card_slot_node.show_empty()

func _create_material_slots():
	"""å‰µå»º5å€‹ç´ ææ§½ä½"""
	for i in range(MAX_MATERIAL_SLOTS):
		var slot = EvolutionCardSlot.instantiate()
		slot.custom_minimum_size = Vector2(90, 135)
		slot.slot_clicked.connect(_on_material_slot_pressed.bind(i))
		material_slots_container.add_child(slot)
		material_slots.append(slot)
		material_cards.append(null)
		slot.show_empty()

func _create_preview_card_slot():
	"""å‰µå»ºé€²åŒ–é è¦½å¡æ§½"""
	preview_card_slot_node = EvolutionCardSlot.instantiate()
	preview_card_slot_node.custom_minimum_size = Vector2(150, 210)
	preview_card_slot_container.add_child(preview_card_slot_node)
	preview_card_slot_node.show_empty()
	# é€£æ¥é»æ“Šäº‹ä»¶ä»¥é¡¯ç¤ºé€²åŒ–å¾Œå¡ç‰‡çš„è©³æƒ…
	preview_card_slot_node.slot_clicked.connect(_on_preview_card_clicked)

func _load_card_database():
	"""å¾ JSON è¼‰å…¥å¡ç‰‡å®šç¾©æ•¸æ“šåº«"""
	var file_path = "res://data/cards.json"
	if not FileAccess.file_exists(file_path):
		push_error("âŒ æ‰¾ä¸åˆ°å¡ç‰‡æ•¸æ“šåº«: " + file_path)
		return

	var file = FileAccess.open(file_path, FileAccess.READ)
	if file == null:
		push_error("âŒ ç„¡æ³•æ‰“é–‹å¡ç‰‡æ•¸æ“šåº«")
		return

	var json_text = file.get_as_text()
	file.close()

	var json = JSON.new()
	var error = json.parse(json_text)
	if error != OK:
		push_error("âŒ JSON è§£æéŒ¯èª¤: " + json.get_error_message())
		return

	var data = json.get_data()
	var cards_array = data.get("cards", [])

	# å»ºç«‹ card_id -> card_data çš„æ˜ å°„
	for card in cards_array:
		var card_id = card.get("card_id", "")
		if card_id != "":
			card_database[card_id] = card

	print("âœ… æˆåŠŸè¼‰å…¥ %d å¼µå¡ç‰‡å®šç¾©" % card_database.size())

func _load_player_cards():
	"""è¼‰å…¥ç©å®¶å¡ç‰‡"""
	player_cards = PlayerDataManager.get_all_card_instances()
	print("âœ… ç©å®¶æ“æœ‰ %d å¼µå¡ç‰‡" % player_cards.size())

	# èª¿è©¦ï¼šåˆ—å‡ºæ‰€æœ‰å¡ç‰‡çš„é€²åŒ–ä¿¡æ¯
	for card in player_cards:
		if card.evoland.size() > 0:
			print("  ğŸ“‹ %s (Lv.%d/%d) evoland=%s material=%s å¯é€²åŒ–=%s" % [
				card.card_name,
				card.current_level,
				card.max_level,
				card.evoland,
				card.material,
				_can_card_evolve(card)
			])

func _check_auto_select_card():
	"""æª¢æŸ¥æ˜¯å¦æœ‰å¾èƒŒåŒ…é¸ä¸­çš„å¡ç‰‡éœ€è¦è‡ªå‹•æ”¾å…¥"""
	var selected_instance_id = GameManager.selected_card_for_evolution
	if selected_instance_id.is_empty():
		return

	# æ¸…ç©ºé¸ä¸­çš„å¡ç‰‡ï¼ˆé¿å…ä¸‹æ¬¡é€²å…¥æ™‚é‡è¤‡é¸ä¸­ï¼‰
	GameManager.selected_card_for_evolution = ""

	# æ‰¾åˆ°è©²å¡ç‰‡
	for card in player_cards:
		if card.instance_id == selected_instance_id:
			# è‡ªå‹•æ”¾å…¥ç›®æ¨™æ§½
			target_card = card

			# æ¸…ç©ºç´ ææ§½
			for i in range(MAX_MATERIAL_SLOTS):
				material_cards[i] = null

			_update_target_card_display()
			_update_material_slots_display()
			update_evolution_info()

			print("âœ… è‡ªå‹•é¸ä¸­å¡ç‰‡ï¼š%s" % card.card_name)
			break

# ==================== UI æ›´æ–° ====================
func _update_ui():
	"""æ›´æ–°å¡ç‰‡åˆ—è¡¨UI"""
	# æ¸…ç©ºç¾æœ‰åˆ—è¡¨
	for child in card_list.get_children():
		child.queue_free()

	# å‰µå»ºå¡ç‰‡æŒ‰éˆ•
	for card in player_cards:
		_create_card_button(card)

func _create_card_button(card: CardData):
	"""å‰µå»ºå¡ç‰‡æ§½"""
	var slot = EvolutionCardSlot.instantiate()
	slot.custom_minimum_size = Vector2(0, 140)

	# å¿…é ˆå…ˆ add_childï¼Œè®“ @onready è®Šæ•¸åˆå§‹åŒ–
	card_list.add_child(slot)

	# ç„¶å¾Œæ‰èƒ½èª¿ç”¨ setup
	slot.setup(card, "list")

	# æª¢æŸ¥æ˜¯å¦å¯é€²åŒ–
	var can_evolve = _can_card_evolve(card)
	var evoland = card.evoland
	var has_evolution = evoland.size() > 0

	if has_evolution and can_evolve:
		slot.set_status_text("âœ¨å¯é€²åŒ–", Color(1, 0.85, 0))
	elif has_evolution:
		slot.set_status_text("ğŸ”’æœªæ»¿ç­‰", Color(0.7, 0.7, 0.7))

	# ä¿¡è™Ÿå·²ç¶“æœƒå‚³é instance_idï¼Œä¸éœ€è¦ bind
	slot.slot_clicked.connect(_on_card_selected)

	# æ·»åŠ å³éµé»æ“Šé¡¯ç¤ºè©³æƒ…ï¼ˆé¼ æ¨™é€²å…¥æ™‚å•Ÿç”¨å³éµèœå–®ï¼‰
	slot.gui_input.connect(_on_card_slot_gui_input.bind(card.instance_id))

func _update_target_card_display():
	"""æ›´æ–°ç›®æ¨™å¡ç‰‡æ§½é¡¯ç¤º"""
	if target_card == null:
		target_card_slot_node.show_empty()
		return

	target_card_slot_node.setup(target_card, "target")

func _update_material_slots_display():
	"""æ›´æ–°ç´ ææ§½é¡¯ç¤º"""
	for i in range(MAX_MATERIAL_SLOTS):
		var slot = material_slots[i]
		var mat_card = material_cards[i]

		if mat_card == null:
			slot.show_empty()
		else:
			slot.setup(mat_card, "material")

func _update_preview_card_display():
	"""æ›´æ–°é€²åŒ–é è¦½å¡æ§½é¡¯ç¤º"""
	if target_card == null or target_card.evoland.size() == 0:
		preview_card_slot_node.show_empty()
		return

	# ç²å–é€²åŒ–å¾Œçš„å¡ç‰‡ID
	var evolved_card_id = target_card.evoland[0]

	# å‰µå»ºä¸€å€‹è‡¨æ™‚çš„ CardData ä¾†é¡¯ç¤ºé è¦½
	var preview_card = DataManager.get_card(evolved_card_id)
	if preview_card:
		preview_card.instance_id = "preview_" + evolved_card_id  # è‡¨æ™‚IDç”¨æ–¼é è¦½
		preview_card_slot_node.setup(preview_card, "preview")
		preview_card_slot_node.set_status_text("é»æ“ŠæŸ¥çœ‹è©³æƒ…", Color(0.8, 0.8, 1.0))
	else:
		preview_card_slot_node.show_empty()

func update_evolution_info():
	"""æ›´æ–°é€²åŒ–ä¿¡æ¯é¡¯ç¤º"""
	if target_card == null:
		info_label.text = "è«‹é¸æ“‡è¦é€²åŒ–çš„å¡ç‰‡"
		cost_label.text = ""
		evolve_button.disabled = true
		auto_fill_button.disabled = true
		preview_card_slot_node.show_empty()
		return

	auto_fill_button.disabled = false

	var evoland = target_card.evoland
	var materials_needed = target_card.material

	# æª¢æŸ¥æ˜¯å¦æœ‰é€²åŒ–è·¯ç·š
	if evoland.size() == 0:
		info_label.text = "æ­¤å¡å°šç„¡é€²åŒ–æ–¹å‘"
		cost_label.text = ""
		evolve_button.disabled = true
		preview_card_slot_node.show_empty()
		return

	# æª¢æŸ¥æ˜¯å¦æ»¿ç­‰
	var level = target_card.current_level
	var max_level = target_card.max_level
	if level < max_level:
		info_label.text = "éœ€é”åˆ° Lv.%d æ‰èƒ½é€²åŒ–" % max_level
		cost_label.text = ""
		evolve_button.disabled = true
		preview_card_slot_node.show_empty()
		return

	var info_text = "æ¶ˆè€—ä»£åƒ¹å¦‚ä¸‹ï¼š\n"

	# çµ±è¨ˆæ‰€éœ€ç´ æ
	var material_count = {}
	for mat_id in materials_needed:
		material_count[mat_id] = material_count.get(mat_id, 0) + 1

	# é¡¯ç¤ºç´ æéœ€æ±‚
	for mat_id in material_count.keys():
		var mat_def = card_database.get(mat_id, {})
		var mat_name = mat_def.get("card_name", mat_id)
		var needed = material_count[mat_id]
		var owned = _count_available_material(mat_id)
		info_text += "%s x%d (æŒæœ‰%då€‹)\n" % [mat_name, needed, owned]

	info_label.text = info_text
	cost_label.text = "é€²åŒ–è²»ç”¨ï¼š%d é‡‘å¹£" % EVOLUTION_GOLD_COST

	# æ›´æ–°é€²åŒ–é è¦½å¡æ§½
	_update_preview_card_display()

	# æŒ‰éˆ•ç¸½æ˜¯å¯ä»¥é»æ“Šï¼Œé»æ“Šæ™‚æª¢æŸ¥æ¢ä»¶
	evolve_button.disabled = false

# ==================== é€²åŒ–é‚è¼¯ ====================
func _can_card_evolve(card: CardData) -> bool:
	"""æª¢æŸ¥å¡ç‰‡æ˜¯å¦å¯ä»¥é€²åŒ–"""
	var evoland = card.evoland

	if evoland.size() == 0:
		return false

	var level = card.current_level
	var max_level = card.max_level

	return level >= max_level

func _check_evolution_requirements() -> bool:
	"""æª¢æŸ¥é€²åŒ–æ¢ä»¶æ˜¯å¦æ»¿è¶³"""
	if target_card == null:
		return false

	var evoland = target_card.evoland
	var materials_needed = target_card.material

	# æª¢æŸ¥é€²åŒ–è·¯ç·š
	if evoland.size() == 0:
		return false

	# æª¢æŸ¥ç­‰ç´š
	if not _can_card_evolve(target_card):
		return false

	# æª¢æŸ¥ç´ ææ˜¯å¦æ”¾å…¥
	var placed_materials = []
	for mat in material_cards:
		if mat != null:
			placed_materials.append(mat.card_id)

	# è¤‡è£½éœ€æ±‚åˆ—è¡¨
	var needed = materials_needed.duplicate()
	for placed_id in placed_materials:
		var idx = needed.find(placed_id)
		if idx != -1:
			needed.remove_at(idx)

	if needed.size() > 0:
		return false

	# æª¢æŸ¥é‡‘å¹£
	if PlayerDataManager.get_gold() < EVOLUTION_GOLD_COST:
		return false

	return true

func _count_available_material(mat_id: String) -> int:
	"""çµ±è¨ˆå¯ç”¨çš„ç´ æå¡ç‰‡æ•¸é‡ï¼ˆæ’é™¤çµ„éšŠä¸­çš„ï¼‰"""
	var count = 0
	for card in player_cards:
		if card.card_id == mat_id:
			# æª¢æŸ¥æ˜¯å¦åœ¨çµ„éšŠä¸­
			if not PlayerDataManager.is_card_in_team(card.instance_id):
				count += 1
	return count

func _get_available_material_cards(mat_id: String) -> Array:
	"""ç²å–å¯ç”¨çš„ç´ æå¡ç‰‡å¯¦ä¾‹"""
	var cards = []
	for card in player_cards:
		if card.card_id == mat_id:
			if not PlayerDataManager.is_card_in_team(card.instance_id):
				cards.append(card)
	return cards

func _get_evolution_error_message() -> String:
	"""ç²å–é€²åŒ–å¤±æ•—çš„å…·é«”åŸå› """
	if target_card == null:
		return "å°šæœªé¸æ“‡è¦é€²åŒ–çš„å¡ç‰‡"

	var evoland = target_card.evoland
	var materials_needed = target_card.material

	# æª¢æŸ¥é€²åŒ–è·¯ç·š
	if evoland.size() == 0:
		return "æ­¤å¡ç‰‡ç„¡æ³•é€²åŒ–"

	# æª¢æŸ¥ç­‰ç´š
	if not _can_card_evolve(target_card):
		return "å¡ç‰‡æœªé”åˆ°æ»¿ç­‰ï¼ˆéœ€è¦ Lv.%dï¼‰" % target_card.max_level

	# æª¢æŸ¥ç´ ææ˜¯å¦æ”¾å…¥
	var placed_materials = []
	for mat in material_cards:
		if mat != null:
			placed_materials.append(mat.card_id)

	# æª¢æŸ¥ç´ ææ˜¯å¦è¶³å¤ 
	var needed = materials_needed.duplicate()
	for placed_id in placed_materials:
		var idx = needed.find(placed_id)
		if idx != -1:
			needed.remove_at(idx)

	if needed.size() > 0:
		return "é€²åŒ–ç´ æå°šæœªæ”¾å…¥å®Œæ•´"

	# æª¢æŸ¥é‡‘å¹£
	if PlayerDataManager.get_gold() < EVOLUTION_GOLD_COST:
		return "é‡‘å¹£ä¸è¶³ï¼éœ€è¦ %d é‡‘å¹£ï¼Œç•¶å‰ %d é‡‘å¹£" % [EVOLUTION_GOLD_COST, PlayerDataManager.get_gold()]

	return ""  # æ²’æœ‰éŒ¯èª¤

# ==================== äº‹ä»¶è™•ç† ====================
func _on_target_slot_clicked(_instance_id: String):
	"""é»æ“Šç›®æ¨™å¡æ§½ï¼ˆæ¸…ç©ºï¼‰"""
	if target_card != null:
		target_card = null
		# æ¸…ç©ºç´ ææ§½
		for i in range(MAX_MATERIAL_SLOTS):
			material_cards[i] = null

		_update_target_card_display()
		_update_material_slots_display()
		update_evolution_info()

func _on_card_selected(instance_id: String):
	"""é¸æ“‡å¡ç‰‡ä½œç‚ºé€²åŒ–ç›®æ¨™"""
	# æ‰¾åˆ°å¡ç‰‡
	var card = null
	for c in player_cards:
		if c.instance_id == instance_id:
			card = c
			break

	if card == null:
		return

	# æª¢æŸ¥æ˜¯å¦åœ¨çµ„éšŠä¸­
	if PlayerDataManager.is_card_in_team(instance_id):
		GameManager.show_message("ç„¡æ³•é€²åŒ–", "æ­¤å¡ç‰‡æ­£åœ¨çµ„éšŠä¸­ï¼Œç„¡æ³•ä½œç‚ºé€²åŒ–ç´ æ")
		return

	# æ”¾å…¥ç›®æ¨™æ§½
	target_card = card

	# æ¸…ç©ºç´ ææ§½
	for i in range(MAX_MATERIAL_SLOTS):
		material_cards[i] = null

	_update_target_card_display()
	_update_material_slots_display()
	update_evolution_info()

func _on_material_slot_pressed(_instance_id: String, slot_index: int):
	"""é»æ“Šç´ ææ§½ï¼ˆç§»é™¤ç´ æï¼‰"""
	if material_cards[slot_index] != null:
		material_cards[slot_index] = null
		_update_material_slots_display()
		update_evolution_info()

func _on_auto_fill_pressed():
	"""è‡ªå‹•æ”¾å…¥ç´ æ"""
	if target_card == null:
		return

	var materials_needed = target_card.material

	if materials_needed.size() == 0:
		GameManager.show_message("æç¤º", "æ­¤å¡ç‰‡ä¸éœ€è¦ç´ æ")
		return

	# æ¸…ç©ºç¾æœ‰ç´ æ
	for i in range(MAX_MATERIAL_SLOTS):
		material_cards[i] = null

	# çµ±è¨ˆéœ€æ±‚
	var needed_list = materials_needed.duplicate()
	var slot_idx = 0

	# æŒ‰éœ€æ±‚æ”¾å…¥ç´ æ
	while needed_list.size() > 0 and slot_idx < MAX_MATERIAL_SLOTS:
		var mat_id = needed_list[0]
		var available = _get_available_material_cards(mat_id)

		if available.size() > 0:
			# æ‰¾ä¸€å¼µæœªè¢«æ”¾å…¥çš„
			var found = false
			for mat_card in available:
				var already_used = false
				for i in range(slot_idx):
					if material_cards[i] != null and material_cards[i].instance_id == mat_card.instance_id:
						already_used = true
						break

				if not already_used:
					material_cards[slot_idx] = mat_card
					slot_idx += 1
					needed_list.remove_at(0)
					found = true
					break

			if not found:
				break
		else:
			break

	if needed_list.size() > 0:
		GameManager.show_message("ç´ æä¸è¶³", "éƒ¨åˆ†ç´ æä¸è¶³ï¼Œè«‹æ‰‹å‹•è£œå……æˆ–ç²å–æ›´å¤šç´ æ")

	_update_material_slots_display()
	update_evolution_info()

func _on_evolve_pressed():
	"""åŸ·è¡Œé€²åŒ–"""
	# æª¢æŸ¥é€²åŒ–æ¢ä»¶ä¸¦çµ¦å‡ºå…·é«”æç¤º
	var error_msg = _get_evolution_error_message()
	if error_msg != "":
		GameManager.show_message("ç„¡æ³•é€²åŒ–", error_msg)
		return

	var evoland = target_card.evoland
	var target_id = evoland[0]
	var target_def = card_database.get(target_id, {})
	var target_name = target_def.get("card_name", target_id)

	# ç¢ºèªå°è©±æ¡†
	var CustomDialog = load("res://scripts/ui/CustomDialog.gd")
	var dialog = CustomDialog.new()

	var message = "ç¢ºå®šè¦é€²åŒ–æˆ %s å—ï¼Ÿ\n\n" % target_name
	message += "â€¢ æ¶ˆè€—ç´ æå°‡è¢«ç§»é™¤\n"
	message += "â€¢ åŸå¡ç‰‡å°‡è¢«å–ä»£\n"
	message += "â€¢ æ–°å¡ç‰‡å¾ Lv.1 é–‹å§‹\n"
	message += "â€¢ æ¶ˆè€— %d é‡‘å¹£\n\n" % EVOLUTION_GOLD_COST
	message += "æ­¤æ“ä½œç„¡æ³•æ’¤éŠ·ï¼"

	var buttons = [
		{"text": "å–æ¶ˆ", "action": "cancel"},
		{"text": "ç¢ºèªé€²åŒ–", "action": "evolve"}
	]
	dialog.setup_choice_dialog("ç¢ºèªé€²åŒ–", message, buttons)

	dialog.button_pressed.connect(func(action):
		if action == "evolve":
			await get_tree().create_timer(0.1).timeout
			_execute_evolution()
	)

	get_tree().root.add_child(dialog)
	dialog.show_dialog()

func _execute_evolution():
	"""åŸ·è¡Œé€²åŒ–ï¼ˆå¯¦éš›é‚è¼¯ï¼‰"""
	var target_instance_id = target_card.instance_id
	var evoland = target_card.evoland
	var new_card_id = evoland[0]

	# æ”¶é›†ç´ æå¯¦ä¾‹ID
	var material_instance_ids = []
	for mat in material_cards:
		if mat != null:
			material_instance_ids.append(mat.instance_id)

	# æ’­æ”¾é€²åŒ–å‹•ç•«
	await _play_evolution_animation()

	# èª¿ç”¨ PlayerDataManager é€²è¡Œé€²åŒ–
	var result = PlayerDataManager.evolve_card(target_instance_id, new_card_id, material_instance_ids, EVOLUTION_GOLD_COST)

	if result:
		# é€²åŒ–æˆåŠŸ
		var target_def = card_database.get(new_card_id, {})
		var target_name = target_def.get("card_name", new_card_id)

		GameManager.show_message("é€²åŒ–æˆåŠŸ", "æˆåŠŸé€²åŒ–æˆ %sï¼" % target_name)

		# æ¸…ç©ºé¸æ“‡
		target_card = null
		for i in range(MAX_MATERIAL_SLOTS):
			material_cards[i] = null

		# é‡æ–°è¼‰å…¥ç©å®¶å¡ç‰‡
		_load_player_cards()
		_update_ui()
		_update_target_card_display()
		_update_material_slots_display()
		update_evolution_info()
	else:
		GameManager.show_message("é€²åŒ–å¤±æ•—", "é€²åŒ–éç¨‹å‡ºéŒ¯ï¼Œè«‹æª¢æŸ¥æ—¥èªŒ")

func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		_on_back_pressed()

func _on_back_pressed():
	"""è¿”å›ä¸»é¸å–®"""
	print("ğŸ”™ è¿”å›ä¸»é¸å–®")
	GameManager.goto_main_menu()

func _on_card_slot_gui_input(event: InputEvent, instance_id: String):
	"""è™•ç†å¡ç‰‡æ§½çš„è¼¸å…¥äº‹ä»¶ï¼ˆå³éµé¡¯ç¤ºè©³æƒ…ï¼‰"""
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_RIGHT and event.pressed:
			# é¡¯ç¤ºå¡ç‰‡è©³æƒ…
			var slot_position = get_global_mouse_position()
			card_detail_panel.show_card_details_with_instance(instance_id, slot_position)

func _on_preview_card_clicked(_instance_id: String):
	"""é»æ“Šé€²åŒ–é è¦½å¡æ§½ï¼ˆé¡¯ç¤ºé€²åŒ–å¾Œå¡ç‰‡çš„è©³æƒ…ï¼‰"""
	if target_card == null or target_card.evoland.size() == 0:
		return

	# ç²å–é€²åŒ–å¾Œçš„å¡ç‰‡ID
	var evolved_card_id = target_card.evoland[0]

	# é¡¯ç¤ºé€²åŒ–å¾Œå¡ç‰‡çš„è©³æƒ…ï¼ˆä½¿ç”¨æ¨¡æ¿IDï¼Œä¸å«ç­‰ç´šä¿¡æ¯ï¼‰
	var slot_position = get_global_mouse_position()
	card_detail_panel.show_card_details(evolved_card_id, slot_position)

# ==================== é€²åŒ–å‹•ç•« ====================

func _play_evolution_animation():
	"""æ’­æ”¾é€²åŒ–å‹•ç•«æ•ˆæœ"""
	# 1. ç´ æå¡ç‰‡é£›å…¥å‹•ç•«
	await _animate_materials_flying()

	# 2. é–ƒå…‰æ•ˆæœ
	await _animate_flash_effect()

	# 3. æ–°å¡ç‰‡å‡ºç¾å‹•ç•«
	await _animate_new_card_reveal()

func _animate_materials_flying():
	"""ç´ æå¡ç‰‡é£›å…¥å‹•ç•«"""
	var target_global_pos = target_card_slot_node.global_position
	var target_size = target_card_slot_node.size
	var target_center = target_global_pos + target_size / 2

	# ç‚ºæ¯å€‹ç´ æå‰µå»ºé£›è¡Œå‹•ç•«
	var tweens = []
	for i in range(MAX_MATERIAL_SLOTS):
		var mat_slot = material_slots[i]
		var mat_card = material_cards[i]

		if mat_card == null:
			continue

		# å‰µå»ºç´ æå¡ç‰‡çš„è¦–è¦ºå‰¯æœ¬
		var material_clone = ColorRect.new()
		material_clone.custom_minimum_size = mat_slot.size
		material_clone.size = mat_slot.size

		# ç²å–ç´ æå¡ç‰‡çš„é¡è‰²ï¼ˆæ ¹æ“šå…ƒç´ ï¼‰
		var ELEMENT_COLORS = {
			Constants.Element.METAL: Color("FFD700"),
			Constants.Element.WOOD: Color("33CC33"),
			Constants.Element.WATER: Color("3388FF"),
			Constants.Element.FIRE: Color("FF3333"),
			Constants.Element.EARTH: Color("CC9933"),
			Constants.Element.HEART: Color("FF66CC")
		}
		var mat_color = ELEMENT_COLORS.get(mat_card.element, Color.WHITE)
		material_clone.color = mat_color

		# æ·»åŠ åˆ°å ´æ™¯ï¼ˆåœ¨æœ€ä¸Šå±¤ï¼‰
		add_child(material_clone)
		material_clone.global_position = mat_slot.global_position

		# å‰µå»ºé£›è¡Œå‹•ç•«
		var tween = create_tween()
		tween.set_parallel(true)
		tween.set_trans(Tween.TRANS_CUBIC)
		tween.set_ease(Tween.EASE_IN)

		# é£›å‘ç›®æ¨™ä¸­å¿ƒ
		tween.tween_property(material_clone, "global_position", target_center - material_clone.size / 2, 0.5).set_delay(i * 0.1)
		# ç¸®å°
		tween.tween_property(material_clone, "scale", Vector2(0.3, 0.3), 0.5).set_delay(i * 0.1)
		# æ·¡å‡º
		tween.tween_property(material_clone, "modulate:a", 0.0, 0.5).set_delay(i * 0.1)

		# å‹•ç•«çµæŸå¾Œåˆªé™¤å‰¯æœ¬
		tween.finished.connect(func(): material_clone.queue_free())

		tweens.append(tween)

	# ç­‰å¾…æ‰€æœ‰å‹•ç•«å®Œæˆ
	if tweens.size() > 0:
		await tweens[-1].finished
	else:
		await get_tree().create_timer(0.1).timeout

func _animate_flash_effect():
	"""é–ƒå…‰æ•ˆæœ"""
	# å‰µå»ºç™½è‰²é–ƒå…‰è¦†è“‹
	var flash = ColorRect.new()
	flash.color = Color(1, 1, 1, 0)
	flash.size = get_viewport_rect().size
	flash.position = Vector2.ZERO
	flash.z_index = 100
	add_child(flash)

	# é–ƒå…‰å‹•ç•«ï¼šæ·¡å…¥ -> æ·¡å‡º
	var tween = create_tween()
	tween.tween_property(flash, "color:a", 0.8, 0.2)
	tween.tween_property(flash, "color:a", 0.0, 0.3)

	await tween.finished
	flash.queue_free()

	# ç›®æ¨™å¡ç‰‡æ”¾å¤§ç¸®å°æ•ˆæœ
	var target_tween = create_tween()
	target_tween.set_trans(Tween.TRANS_ELASTIC)
	target_tween.set_ease(Tween.EASE_OUT)
	target_tween.tween_property(target_card_slot_node, "scale", Vector2(1.2, 1.2), 0.3)
	target_tween.tween_property(target_card_slot_node, "scale", Vector2(1.0, 1.0), 0.4)

	await target_tween.finished

func _animate_new_card_reveal():
	"""æ–°å¡ç‰‡é¡¯ç¤ºå‹•ç•«"""
	# é€™è£¡æš«æ™‚åªæ˜¯ä¸€å€‹ç°¡å–®çš„ç­‰å¾…
	# å¯¦éš›çš„å¡ç‰‡æ›´æ–°æœƒåœ¨ _execute_evolution ä¸­çš„ PlayerDataManager.evolve_card ä¹‹å¾Œé€²è¡Œ
	await get_tree().create_timer(0.2).timeout
